--- a/JFX_UI/src/jfx/ui/HeaderComp/HeaderComp.fxml
+++ b/JFX_UI/src/jfx/ui/HeaderComp/HeaderComp.fxml
@@ -7,22 +7,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" spacing="8.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.HeaderComp.HeaderCompController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" spacing="8.0" stylesheets="@HeaderCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.HeaderComp.HeaderCompController">
    <children>
-      <Label fx:id="titleLabel" text="Yuval &amp; Roy represents: The best S - Emulator">
+      <Label id="titleLbl" fx:id="titleLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Yuval &amp; Roy represents: The best S - Emulator" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <HBox>
+      <HBox alignment="CENTER_LEFT">
          <children>
-            <Button fx:id="loadButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleLoadButton" text="Load file">
+            <Button id="LoadBTN" fx:id="loadButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleLoadButton" text="Load file">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label fx:id="filePathLabel" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Current file path:" textAlignment="JUSTIFY" HBox.hgrow="ALWAYS">
+            <Label id="PathLbl" fx:id="filePathLabel" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Current file path:" textAlignment="JUSTIFY" HBox.hgrow="ALWAYS">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
