--- a/JFX_UI/src/jfx/ui/InstructionTableView/instructionsTable.fxml
+++ b/JFX_UI/src/jfx/ui/InstructionTableView/instructionsTable.fxml
@@ -3,13 +3,13 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 
-<TableView fx:id="instructionsTable" editable="true" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.InstructionTableView.InstructionsTableController">
+<TableView fx:id="instructionsTable" stylesheets="@InstructionTableViewCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.InstructionTableView.InstructionsTableController">
   <columns>
-    <TableColumn id="IndexCol" fx:id="indexCol" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="Index" />
-    <TableColumn id="BsCol" fx:id="bsCol" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="B\S" />
-      <TableColumn id="LabelCol" fx:id="labelCol" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="Label" />
-      <TableColumn id="CommandCol" fx:id="commandCol" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" text="Command" />
-      <TableColumn id="CyclesCol" fx:id="cyclesCol" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="Cycles" />
+    <TableColumn id="IndexCol" fx:id="indexCol" editable="false" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" sortable="false" text="Index" />
+    <TableColumn id="BsCol" fx:id="bsCol" editable="false" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" sortable="false" text="B\S" />
+      <TableColumn id="LabelCol" fx:id="labelCol" editable="false" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" sortable="false" text="Label" />
+      <TableColumn id="CommandCol" fx:id="commandCol" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" sortable="false" text="Command" />
+      <TableColumn id="CyclesCol" fx:id="cyclesCol" editable="false" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" sortable="false" text="Cycles" />
   </columns>
    <columnResizePolicy>
       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
