--- a/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
+++ b/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.7" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
+<SplitPane dividerPositions="0.7" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" stylesheets="@ViewCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
   <items>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0">
          <children>
             <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <children>
-                  <Button fx:id="programSelectorButton" mnemonicParsing="false" onAction="#handleProgramSelector" text="Program\function selector">
+                  <Button id="selectorFuncCombo" fx:id="programSelectorButton" mnemonicParsing="false" onAction="#handleProgramSelector" text="Program\function selector">
                      <font>
                         <Font size="14.0" />
                      </font></Button>
@@ -22,7 +22,7 @@
                      <font>
                         <Font size="14.0" />
                      </font></Button>
-                  <Label fx:id="currMaxDegreeLabel" maxHeight="1.7976931348623157E308" text="Current\Max degree">
+                  <Label id="CurrMaxlbl" fx:id="currMaxDegreeLabel" maxHeight="1.7976931348623157E308" text="Current\Max degree">
                      <font>
                         <Font size="14.0" />
                      </font></Label>
@@ -30,11 +30,11 @@
                      <font>
                         <Font size="14.0" />
                      </font></Button>
-                  <ComboBox fx:id="highlightSelectorCombo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#handleHighlightSelection" promptText="Highlight selection" HBox.hgrow="ALWAYS" />
+                  <ComboBox id="HightlightCombo" fx:id="highlightSelectorCombo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Highlight selection" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
             <fx:include fx:id="instructionsTable" source="../InstructionTableView/instructionsTable.fxml" />
-            <Label fx:id="summeryLineLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" text="Summary line" />
+            <Label id="summaryLbl" fx:id="summeryLineLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" text="Summary line" />
          </children>
       </VBox>
       <fx:include fx:id="instructionHistoryChainTable" source="../InstructionTableView/instructionsTable.fxml" />
