--- a/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
+++ b/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
@@ -5,36 +5,33 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
-   <children>
-      <HBox alignment="TOP_CENTER" spacing="10.0">
-         <children>
-            <Button fx:id="newRunButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onNewRun" text="New run" HBox.hgrow="ALWAYS" />
-            <HBox spacing="10.0">
-               <children>
-                  <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" text="Execute" />
-                  <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" text="Debug" />
-               </children>
-            </HBox>
-         </children>
-      </HBox>
-      <HBox alignment="TOP_CENTER" spacing="10.0">
-         <children>
-            <Button fx:id="resumeButton" mnemonicParsing="false" onAction="#onResume" text="Resume" />
-            <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStop" text="Stop" />
-            <Button fx:id="stepOverButton" mnemonicParsing="false" onAction="#onStepOver" text="Step Over" />
-         </children>
-      </HBox>
-      <HBox>
-         <children>
-            <VBox HBox.hgrow="ALWAYS">
-               <children>
-                  <fx:include fx:id="varTableComp" source="../VarsTableView/VarsTableViewXML.fxml" />
-                  <Label fx:id="cyclesLabel" text="Cycles" />
-               </children>
-            </VBox>
-            <fx:include fx:id="inputVarsComp" source="../VariableInputsTableView/VariableInputsTableView.fxml" />
-         </children>
-      </HBox>
-   </children>
+
+<VBox alignment="CENTER" minHeight="200.0" prefHeight="250.0" spacing="5.0" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
+    <children>
+        <HBox alignment="CENTER" spacing="5.0">
+            <children>
+                <Button fx:id="newRunButton" mnemonicParsing="false" onAction="#onNewRun" prefWidth="80.0" text="New run" />
+                <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" prefWidth="70.0" text="Execute" />
+                <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" prefWidth="60.0" text="Debug" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" spacing="5.0">
+            <children>
+                <Button fx:id="resumeButton" mnemonicParsing="false" onAction="#onResume" prefWidth="60.0" text="Resume" />
+                <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStop" prefWidth="50.0" text="Stop" />
+                <Button fx:id="stepOverButton" mnemonicParsing="false" onAction="#onStepOver" prefWidth="80.0" text="Step Over" />
+            </children>
+        </HBox>
+        <HBox spacing="5.0" VBox.vgrow="ALWAYS">
+            <children>
+                <VBox HBox.hgrow="ALWAYS">
+                    <children>
+                        <fx:include fx:id="varTableComp" source="../VarsTableView/VarsTableViewXML.fxml" VBox.vgrow="ALWAYS" />
+                        <Label fx:id="cyclesLabel" text="Cycles" />
+                    </children>
+                </VBox>
+                <fx:include fx:id="inputVarsComp" source="../VariableInputsTableView/VariableInputsTableView.fxml" />
+            </children>
+        </HBox>
+    </children>
 </VBox>
