--- a/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
+++ b/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
@@ -8,35 +8,35 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.7" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" stylesheets="@ViewCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
-  <items>
-      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-               <children>
-                  <Button id="selectorFuncCombo" fx:id="programSelectorButton" mnemonicParsing="false" onAction="#handleProgramSelector" text="Program\function selector">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
-                  <Button fx:id="collapseButton" mnemonicParsing="false" onAction="#handleCollapse" text="Collapse">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
-                  <Label id="CurrMaxlbl" fx:id="currMaxDegreeLabel" maxHeight="1.7976931348623157E308" text="Current\Max degree">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Label>
-                  <Button fx:id="expandButton" mnemonicParsing="false" onAction="#handleExpand" text="Expand">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
-                  <ComboBox id="HightlightCombo" fx:id="highlightSelectorCombo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Highlight selection" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
-            <fx:include fx:id="instructionsTable" source="../InstructionTableView/instructionsTable.fxml" />
-            <Label id="summaryLbl" fx:id="summeryLineLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" text="Summary line" />
-         </children>
-      </VBox>
-      <fx:include fx:id="instructionHistoryChainTable" source="../InstructionTableView/instructionsTable.fxml" />
-  </items>
+<SplitPane dividerPositions="0.7" minHeight="300.0" minWidth="400.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="550.0" stylesheets="@ViewCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
+    <items>
+        <VBox prefHeight="200.0" prefWidth="100.0">
+            <children>
+                <HBox spacing="5.0">
+                    <children>
+                        <Button id="selectorFuncCombo" fx:id="programSelectorButton" mnemonicParsing="false" onAction="#handleProgramSelector" prefWidth="120.0" text="Program\function selector">
+                            <font>
+                                <Font size="12.0" />
+                            </font></Button>
+                        <Button fx:id="collapseButton" mnemonicParsing="false" onAction="#handleCollapse" prefWidth="70.0" text="Collapse">
+                            <font>
+                                <Font size="12.0" />
+                            </font></Button>
+                        <Label id="CurrMaxlbl" fx:id="currMaxDegreeLabel" prefWidth="100.0" text="Current\Max degree">
+                            <font>
+                                <Font size="12.0" />
+                            </font></Label>
+                        <Button fx:id="expandButton" mnemonicParsing="false" onAction="#handleExpand" prefWidth="70.0" text="Expand">
+                            <font>
+                                <Font size="12.0" />
+                            </font></Button>
+                        <ComboBox id="HightlightCombo" fx:id="highlightSelectorCombo" prefWidth="150.0" promptText="Highlight selection" HBox.hgrow="ALWAYS" />
+                    </children>
+                </HBox>
+                <fx:include fx:id="instructionsTable" source="../InstructionTableView/instructionsTable.fxml" VBox.vgrow="ALWAYS" />
+                <Label id="summaryLbl" fx:id="summeryLineLabel" alignment="CENTER" contentDisplay="CENTER" text="Summary line" />
+            </children>
+        </VBox>
+        <fx:include fx:id="instructionHistoryChainTable" source="../InstructionTableView/instructionsTable.fxml" />
+    </items>
 </SplitPane>
