--- a/JFX_UI/src/jfx/ui/MainFX/MainFX_CSS.css
+++ b/JFX_UI/src/jfx/ui/MainFX/MainFX_CSS.css
@@ -1,9 +1,9 @@
 .button {
-    -fx-background-color: lightgreen;
+    -fx-background-color: grey;
     -fx-font-size: 14px;
 }
 
 .label {
-    -fx-font-size: 16px;
+    -fx-font-size: 14px;
 }
 
