MINI Bugs Fix + Task

--- a/JFX_UI/src/jfx/ui/MainFX/MainFX.fxml
+++ b/JFX_UI/src/jfx/ui/MainFX/MainFX.fxml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane maxHeight="600.0" maxWidth="1000.0" minHeight="400.0" minWidth="700.0" prefHeight="500.0" prefWidth="850.0" stylesheets="@MainFX_CSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.MainFX.MainFXController">
-    <top>
-        <fx:include fx:id="headerComp" source="../HeaderComp/HeaderComp.fxml" BorderPane.alignment="CENTER" />
-    </top>
-    <center>
-        <fx:include fx:id="viewComp" source="../ViewComp/ViewComp.fxml" BorderPane.alignment="CENTER" />
-    </center>
-    <right>
-        <SplitPane dividerPositions="0.6" orientation="VERTICAL" prefWidth="300.0" BorderPane.alignment="CENTER">
-            <items>
-                <fx:include fx:id="executionComp" source="../ExecutionComp/ExecutionComp.fxml" />
-                <fx:include fx:id="historyComp" source="../HistoryComp/HistoryComp.fxml" />
-            </items>
-        </SplitPane>
-    </right>
-</BorderPane>
+<ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.MainFX.MainFXController">
+    <content>
+        <BorderPane maxHeight="600.0" maxWidth="1000.0" minHeight="400.0" minWidth="700.0" prefHeight="500.0" prefWidth="850.0" stylesheets="@MainFX_CSS.css">
+            <top>
+                <fx:include fx:id="headerComp" source="../HeaderComp/HeaderComp.fxml" BorderPane.alignment="CENTER" />
+            </top>
+            <center>
+                <fx:include fx:id="viewComp" source="../ViewComp/ViewComp.fxml" BorderPane.alignment="CENTER" />
+            </center>
+            <right>
+                <SplitPane dividerPositions="0.6" orientation="VERTICAL" prefWidth="300.0" BorderPane.alignment="CENTER">
+                    <items>
+                        <fx:include fx:id="executionComp" source="../ExecutionComp/ExecutionComp.fxml" />
+                        <fx:include fx:id="historyComp" source="../HistoryComp/HistoryComp.fxml" />
+                    </items>
+                </SplitPane>
+            </right>
+        </BorderPane>
+    </content>
+</ScrollPane>
