--- a/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
+++ b/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
@@ -4,34 +4,48 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
 
-
-<VBox alignment="CENTER" minHeight="200.0" prefHeight="250.0" spacing="5.0" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
+<VBox alignment="CENTER" minHeight="200.0" prefHeight="250.0" spacing="8.0" styleClass="execution-vbox" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
     <children>
-        <HBox alignment="CENTER" spacing="5.0">
+        <HBox alignment="CENTER" spacing="8.0" prefHeight="35.0">
             <children>
-                <Button fx:id="newRunButton" mnemonicParsing="false" onAction="#onNewRun" prefWidth="80.0" text="New run" />
-                <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" prefWidth="70.0" text="Execute" />
-                <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" prefWidth="60.0" text="Debug" />
+                <Button fx:id="newRunButton" mnemonicParsing="false" onAction="#onNewRun" prefWidth="80.0" text="New run" HBox.hgrow="ALWAYS" maxWidth="90.0" />
+                <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" prefWidth="70.0" text="Execute" HBox.hgrow="ALWAYS" maxWidth="80.0" />
+                <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" prefWidth="60.0" text="Debug" HBox.hgrow="ALWAYS" maxWidth="70.0" />
             </children>
+            <padding>
+                <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
+            </padding>
         </HBox>
-        <HBox alignment="CENTER" spacing="5.0">
+
+        <HBox alignment="CENTER" spacing="8.0" prefHeight="35.0">
             <children>
-                <Button fx:id="resumeButton" mnemonicParsing="false" onAction="#onResume" prefWidth="60.0" text="Resume" />
-                <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStop" prefWidth="50.0" text="Stop" />
-                <Button fx:id="stepOverButton" mnemonicParsing="false" onAction="#onStepOver" prefWidth="80.0" text="Step Over" />
+                <Button fx:id="resumeButton" mnemonicParsing="false" onAction="#onResume" prefWidth="60.0" text="Resume" HBox.hgrow="ALWAYS" maxWidth="70.0" />
+                <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStop" prefWidth="50.0" text="Stop" HBox.hgrow="ALWAYS" maxWidth="60.0" />
+                <Button fx:id="stepOverButton" mnemonicParsing="false" onAction="#onStepOver" prefWidth="80.0" text="Step Over" HBox.hgrow="ALWAYS" maxWidth="90.0" />
             </children>
+            <padding>
+                <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
+            </padding>
         </HBox>
-        <HBox spacing="5.0" VBox.vgrow="ALWAYS">
+
+        <HBox spacing="8.0" VBox.vgrow="ALWAYS">
             <children>
-                <VBox HBox.hgrow="ALWAYS">
+                <VBox HBox.hgrow="ALWAYS" spacing="3.0">
                     <children>
                         <fx:include fx:id="varTableComp" source="../VarsTableView/VarsTableViewXML.fxml" VBox.vgrow="ALWAYS" />
-                        <Label fx:id="cyclesLabel" text="Cycles" />
+                        <Label fx:id="cyclesLabel" text="Cycles: 0" id="cyclesLabel" />
                     </children>
                 </VBox>
                 <fx:include fx:id="inputVarsComp" source="../VariableInputsTableView/VariableInputsTableView.fxml" />
             </children>
+            <padding>
+                <Insets top="5.0" />
+            </padding>
         </HBox>
     </children>
+    <padding>
+        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+    </padding>
 </VBox>
