--- a/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
+++ b/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
@@ -7,32 +7,57 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
 
 <SplitPane dividerPositions="0.7" minHeight="300.0" minWidth="400.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="550.0" stylesheets="@ViewCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
     <items>
-        <VBox prefHeight="200.0" prefWidth="100.0">
+        <VBox prefHeight="200.0" prefWidth="100.0" spacing="3.0">
             <children>
-                <HBox spacing="5.0">
+                <HBox spacing="8.0" alignment="CENTER" prefHeight="30.0">
                     <children>
-                  <ComboBox fx:id="programSelectorComboBox" onAction="#handleProgramSelector" prefWidth="150.0" promptText="Function selector" />
-                        <Button fx:id="collapseButton" mnemonicParsing="false" onAction="#handleCollapse" prefWidth="90.0" text="Collapse">
-                            <font>
-                                <Font size="12.0" />
-                            </font></Button>
-                        <Label id="CurrMaxlbl" fx:id="currMaxDegreeLabel" prefWidth="100.0" text="Current\Max degree">
-                            <font>
-                                <Font size="12.0" />
-                            </font></Label>
-                        <Button fx:id="expandButton" mnemonicParsing="false" onAction="#handleExpand" prefWidth="90.0" text="Expand">
-                            <font>
-                                <Font size="12.0" />
-                            </font></Button>
-                        <ComboBox id="HightlightCombo" fx:id="highlightSelectorCombo" prefWidth="150.0" promptText="Highlight" HBox.hgrow="ALWAYS" />
+                        <ComboBox fx:id="DegreeSelectorComboBox" onAction="#OnDegreeSelection" prefWidth="150.0" promptText="Degree selector" HBox.hgrow="ALWAYS" maxWidth="180.0" />
+                        <ComboBox fx:id="programSelectorComboBox" onAction="#handleProgramSelector" prefWidth="150.0" promptText="Function selector" HBox.hgrow="ALWAYS" maxWidth="180.0" />
+                        <ComboBox id="HightlightCombo" fx:id="highlightSelectorCombo" prefWidth="150.0" promptText="Highlight" HBox.hgrow="ALWAYS" maxWidth="180.0" />
                     </children>
+                    <padding>
+                        <Insets left="5.0" right="5.0" top="2.0" bottom="2.0" />
+                    </padding>
                 </HBox>
+
+                <HBox spacing="10.0" alignment="CENTER" prefHeight="32.0">
+                    <children>
+                        <Button fx:id="collapseButton" mnemonicParsing="false" onAction="#handleCollapse" prefWidth="85.0" text="Collapse" HBox.hgrow="ALWAYS" maxWidth="100.0">
+                            <font>
+                                <Font size="11.0" />
+                            </font>
+                        </Button>
+                        <Label id="CurrMaxlbl" fx:id="currMaxDegreeLabel" prefWidth="100.0" text="Current\Max degree" alignment="CENTER" HBox.hgrow="ALWAYS" maxWidth="120.0">
+                            <font>
+                                <Font size="11.0" />
+                            </font>
+                        </Label>
+                        <Button fx:id="expandButton" mnemonicParsing="false" onAction="#handleExpand" prefWidth="85.0" text="Expand" HBox.hgrow="ALWAYS" maxWidth="100.0">
+                            <font>
+                                <Font size="11.0" />
+                            </font>
+                        </Button>
+                    </children>
+                    <padding>
+                        <Insets left="5.0" right="5.0" top="2.0" bottom="2.0" />
+                    </padding>
+                </HBox>
+
                 <fx:include fx:id="instructionsTable" source="../InstructionTableView/instructionsTable.fxml" VBox.vgrow="ALWAYS" />
-                <Label id="summaryLbl" fx:id="summeryLineLabel" alignment="CENTER" contentDisplay="CENTER" text="Summary line" />
+
+                <Label id="summaryLbl" fx:id="summeryLineLabel" alignment="CENTER" contentDisplay="CENTER" text="Summary line">
+                    <padding>
+                        <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
+                    </padding>
+                </Label>
             </children>
+            <padding>
+                <Insets left="3.0" right="3.0" top="3.0" bottom="3.0" />
+            </padding>
         </VBox>
         <fx:include fx:id="instructionHistoryChainTable" source="../InstructionTableView/instructionsTable.fxml" />
     </items>
