--- a/JFX_UI/src/jfx/ui/MainFX/MainFX.fxml
+++ b/JFX_UI/src/jfx/ui/MainFX/MainFX.fxml
@@ -7,7 +7,7 @@
 
 <ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.MainFX.MainFXController">
     <content>
-        <BorderPane maxHeight="600.0" maxWidth="1000.0" minHeight="400.0" minWidth="700.0" prefHeight="500.0" prefWidth="850.0" stylesheets="@MainFX_CSS.css">
+        <BorderPane minHeight="400.0" minWidth="700.0" prefHeight="600.0" prefWidth="850.0" stylesheets="@MainFX_CSS.css">
             <top>
                 <fx:include fx:id="headerComp" source="../HeaderComp/HeaderComp.fxml" BorderPane.alignment="CENTER" />
             </top>
