--- a/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
+++ b/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
@@ -8,11 +8,12 @@
 
 <VBox alignment="CENTER" minHeight="200.0" prefHeight="250.0" spacing="8.0" styleClass="execution-vbox" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
     <children>
-        <HBox alignment="CENTER" spacing="8.0" prefHeight="35.0">
+        <HBox alignment="CENTER" spacing="6.0" prefHeight="35.0">
             <children>
-                <Button fx:id="newRunButton" mnemonicParsing="false" onAction="#onNewRun" prefWidth="80.0" text="New run" HBox.hgrow="ALWAYS" maxWidth="90.0" />
-                <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" prefWidth="70.0" text="Execute" HBox.hgrow="ALWAYS" maxWidth="80.0" />
-                <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" prefWidth="60.0" text="Debug" HBox.hgrow="ALWAYS" maxWidth="70.0" />
+                <Button fx:id="newRunButton" mnemonicParsing="false" onAction="#onNewRun" prefWidth="70.0" text="New run" HBox.hgrow="ALWAYS" maxWidth="80.0" />
+                <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" prefWidth="65.0" text="Execute" HBox.hgrow="ALWAYS" maxWidth="75.0" />
+                <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" prefWidth="55.0" text="Debug" HBox.hgrow="ALWAYS" maxWidth="65.0" />
+                <Button fx:id="breakpointButton" mnemonicParsing="false" onAction="#onBreakpointPress" prefWidth="60.0" text="BP" HBox.hgrow="ALWAYS" maxWidth="70.0" />
             </children>
             <padding>
                 <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
