--- a/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
+++ b/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
@@ -6,32 +6,40 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
 
-<VBox alignment="CENTER" minHeight="200.0" prefHeight="250.0" spacing="8.0" styleClass="execution-vbox" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
+<VBox alignment="CENTER" minHeight="200.0" prefHeight="280.0" spacing="4.0" styleClass="execution-vbox" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
     <children>
-        <HBox alignment="CENTER" spacing="6.0" prefHeight="35.0">
+        <HBox alignment="CENTER" spacing="8.0" prefHeight="34.0">
             <children>
-                <Button fx:id="newRunButton" mnemonicParsing="false" onAction="#onNewRun" prefWidth="70.0" text="New run" HBox.hgrow="ALWAYS" maxWidth="80.0" />
-                <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" prefWidth="65.0" text="Execute" HBox.hgrow="ALWAYS" maxWidth="75.0" />
-                <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" prefWidth="55.0" text="Debug" HBox.hgrow="ALWAYS" maxWidth="65.0" />
-                <Button fx:id="breakpointButton" mnemonicParsing="false" onAction="#onBreakpointPress" prefWidth="60.0" text="BP" HBox.hgrow="ALWAYS" maxWidth="70.0" />
+                <Button fx:id="newRunButton" mnemonicParsing="false" onAction="#onNewRun" prefWidth="110.0" text="New Run" HBox.hgrow="ALWAYS" />
+                <Button fx:id="executeButton" mnemonicParsing="false" onAction="#onExecutePress" prefWidth="95.0" text="Execute" HBox.hgrow="ALWAYS" />
+                <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugPress" prefWidth="80.0" text="Debug" HBox.hgrow="ALWAYS" />
             </children>
             <padding>
-                <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
+                <Insets left="6.0" right="6.0" top="2.0" bottom="2.0" />
             </padding>
         </HBox>
 
-        <HBox alignment="CENTER" spacing="8.0" prefHeight="35.0">
+        <HBox alignment="CENTER" spacing="8.0" prefHeight="34.0">
             <children>
-                <Button fx:id="resumeButton" mnemonicParsing="false" onAction="#onResume" prefWidth="60.0" text="Resume" HBox.hgrow="ALWAYS" maxWidth="70.0" />
-                <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStop" prefWidth="50.0" text="Stop" HBox.hgrow="ALWAYS" maxWidth="60.0" />
-                <Button fx:id="stepOverButton" mnemonicParsing="false" onAction="#onStepOver" prefWidth="80.0" text="Step Over" HBox.hgrow="ALWAYS" maxWidth="90.0" />
+                <Button fx:id="breakpointButton" mnemonicParsing="false" onAction="#onBreakpointPress" prefWidth="150.0" text="Breakpoint" HBox.hgrow="ALWAYS" />
+                <Button fx:id="stepOverButton" mnemonicParsing="false" onAction="#onStepOver" prefWidth="150.0" text="Step Over" HBox.hgrow="ALWAYS" />
             </children>
             <padding>
-                <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
+                <Insets left="6.0" right="6.0" top="2.0" bottom="2.0" />
             </padding>
         </HBox>
 
-        <HBox spacing="8.0" VBox.vgrow="ALWAYS">
+        <HBox alignment="CENTER" spacing="8.0" prefHeight="34.0">
+            <children>
+                <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStop" prefWidth="150.0" text="Stop" HBox.hgrow="ALWAYS" />
+                <Button fx:id="resumeButton" mnemonicParsing="false" onAction="#onResume" prefWidth="150.0" text="Resume" HBox.hgrow="ALWAYS" />
+            </children>
+            <padding>
+                <Insets left="6.0" right="6.0" top="2.0" bottom="2.0" />
+            </padding>
+        </HBox>
+
+        <HBox spacing="6.0" VBox.vgrow="ALWAYS">
             <children>
                 <VBox HBox.hgrow="ALWAYS" spacing="3.0">
                     <children>
@@ -42,11 +50,11 @@
                 <fx:include fx:id="inputVarsComp" source="../VariableInputsTableView/VariableInputsTableView.fxml" />
             </children>
             <padding>
-                <Insets top="5.0" />
+                <Insets top="3.0" />
             </padding>
         </HBox>
     </children>
     <padding>
-        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
     </padding>
 </VBox>
