--- a/JFX_UI/src/jfx/ui/EmulatorScreen/EmulatorScreen.fxml
+++ b/JFX_UI/src/jfx/ui/EmulatorScreen/EmulatorScreen.fxml
@@ -8,19 +8,11 @@
 <ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.EmulatorScreen.EmulatorScreenController">
     <content>
         <BorderPane minHeight="400.0" minWidth="700.0" prefHeight="600.0" prefWidth="850.0" stylesheets="@EmulatorScreen_CSS.css">
-            <top>
-                <fx:include fx:id="headerComp" source="../HeaderComp/HeaderComp.fxml" BorderPane.alignment="CENTER" />
-            </top>
             <center>
                 <fx:include fx:id="viewComp" source="../ViewComp/ViewComp.fxml" BorderPane.alignment="CENTER" />
             </center>
             <right>
-                <SplitPane dividerPositions="0.6" orientation="VERTICAL" prefWidth="300.0" BorderPane.alignment="CENTER">
-                    <items>
-                        <fx:include fx:id="executionComp" source="../ExecutionComp/ExecutionComp.fxml" />
-                        <fx:include fx:id="historyComp" source="../HistoryComp/HistoryComp.fxml" />
-                    </items>
-                </SplitPane>
+                <fx:include fx:id="executionComp" source="../ExecutionComp/ExecutionComp.fxml" BorderPane.alignment="CENTER" />
             </right>
         </BorderPane>
     </content>
