--- a/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
+++ b/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -47,7 +48,13 @@
                         <Label fx:id="cyclesLabel" text="Cycles: 0" id="cyclesLabel" />
                     </children>
                 </VBox>
-                <fx:include fx:id="inputVarsComp" source="../VariableInputsTableView/VariableInputsTableView.fxml" />
+                <VBox HBox.hgrow="ALWAYS" spacing="3.0">
+                    <children>
+                        <ComboBox fx:id="architectureSelectionComboBox" prefWidth="200.0" promptText="Architecture Selection" maxWidth="Infinity" VBox.vgrow="NEVER" />
+                        <fx:include fx:id="inputVarsComp" source="../VariableInputsTableView/VariableInputsTableView.fxml" VBox.vgrow="ALWAYS" />
+                        <Button fx:id="backToDashboardButton" mnemonicParsing="false" onAction="#onBackToDashboard" text="Back to Dashboard" prefHeight="35.0" maxWidth="Infinity" styleClass="success" VBox.vgrow="NEVER" />
+                    </children>
+                </VBox>
             </children>
             <padding>
                 <Insets top="3.0" />
