--- a/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
+++ b/JFX_UI/src/jfx/ui/ExecutionComp/ExecutionComp.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
 
-<VBox alignment="CENTER" minHeight="200.0" prefHeight="280.0" spacing="4.0" styleClass="execution-vbox" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
+<VBox alignment="CENTER" minHeight="200.0" minWidth="250.0" maxWidth="400.0" prefWidth="350.0" prefHeight="280.0" spacing="4.0" styleClass="execution-vbox" stylesheets="@ExecutionCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ExecutionComp.ExecutionCompController">
     <children>
         <HBox alignment="CENTER" spacing="8.0" prefHeight="34.0">
             <children>
