--- a/JFX_UI/src/jfx/ui/FunctionsInfoTableView/FunctionsInfoTableView.fxml
+++ b/JFX_UI/src/jfx/ui/FunctionsInfoTableView/FunctionsInfoTableView.fxml
@@ -8,10 +8,13 @@
            fx:controller="jfx.ui.FunctionsInfoTableView.FunctionsInfoTableViewController"
            fx:id="table" prefWidth="700.0" prefHeight="400.0">
     <columns>
-        <TableColumn fx:id="nameCol" text="Name" prefWidth="120.0"/>
-        <TableColumn fx:id="uploadUserNameCol" text="Uploaded By" prefWidth="120.0"/>
-        <TableColumn fx:id="instructionCountCol" text="Instructions" prefWidth="100.0"/>
-        <TableColumn fx:id="maxDegreeCol" text="Max Degree" prefWidth="100.0"/>
-        <TableColumn fx:id="relatedProgramCol" text="Related Program" prefWidth="150.0"/>
+        <TableColumn fx:id="nameCol" text="Name" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="100.0"/>
+        <TableColumn fx:id="uploadUserNameCol" text="Uploaded By" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="100.0"/>
+        <TableColumn fx:id="instructionCountCol" text="Instructions" minWidth="80.0" maxWidth="80.0" prefWidth="80.0"/>
+        <TableColumn fx:id="maxDegreeCol" text="Max Degree" minWidth="85.0" maxWidth="85.0" prefWidth="85.0"/>
+        <TableColumn fx:id="relatedProgramCol" text="Related Program" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="120.0"/>
     </columns>
+    <columnResizePolicy>
+        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+    </columnResizePolicy>
 </TableView>
