--- a/JFX_UI/src/jfx/ui/LoginComp/LoginComp.fxml
+++ b/JFX_UI/src/jfx/ui/LoginComp/LoginComp.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-          minHeight="-Infinity" minWidth="-Infinity"
+          minHeight="400.0" minWidth="500.0"
           prefHeight="600.0" prefWidth="800.0"
           style="-fx-background-color: #f4f4f4;"
           xmlns="http://javafx.com/javafx/21"
