--- a/JFX_UI/src/jfx/ui/ProgramsInfoTableView/ProgramsInfoTableView.fxml
+++ b/JFX_UI/src/jfx/ui/ProgramsInfoTableView/ProgramsInfoTableView.fxml
@@ -8,11 +8,14 @@
            fx:controller="jfx.ui.ProgramsInfoTableView.ProgramsInfoTableViewController"
            fx:id="table" prefWidth="700.0" prefHeight="400.0">
     <columns>
-        <TableColumn fx:id="nameCol" text="Name" prefWidth="120.0"/>
-        <TableColumn fx:id="uploadUserNameCol" text="Uploaded By" prefWidth="120.0"/>
-        <TableColumn fx:id="instructionCountCol" text="Instructions" prefWidth="100.0"/>
-        <TableColumn fx:id="maxDegreeCol" text="Max Degree" prefWidth="100.0"/>
-        <TableColumn fx:id="executionsCol" text="Executions" prefWidth="100.0"/>
-        <TableColumn fx:id="avgCreditCol" text="Avg Credit" prefWidth="100.0"/>
+        <TableColumn fx:id="nameCol" text="Name" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="100.0"/>
+        <TableColumn fx:id="uploadUserNameCol" text="Uploaded By" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="100.0"/>
+        <TableColumn fx:id="instructionCountCol" text="Instructions" minWidth="80.0" maxWidth="80.0" prefWidth="80.0"/>
+        <TableColumn fx:id="maxDegreeCol" text="Max Degree" minWidth="85.0" maxWidth="85.0" prefWidth="85.0"/>
+        <TableColumn fx:id="executionsCol" text="Executions" minWidth="75.0" maxWidth="75.0" prefWidth="75.0"/>
+        <TableColumn fx:id="avgCreditCol" text="Avg Credit" minWidth="75.0" maxWidth="75.0" prefWidth="75.0"/>
     </columns>
+    <columnResizePolicy>
+        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+    </columnResizePolicy>
 </TableView>
