--- a/JFX_UI/src/jfx/ui/ShowUsersComp/ShowUsersComp.fxml
+++ b/JFX_UI/src/jfx/ui/ShowUsersComp/ShowUsersComp.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane dividerPositions="0.6" orientation="VERTICAL"
+<SplitPane dividerPositions="0.6" orientation="VERTICAL" minWidth="300.0" prefWidth="400.0"
            xmlns="http://javafx.com/javafx/24.0.1"
            xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="jfx.ui.ShowUsersComp.ShowUsersCompController">
