--- a/JFX_UI/src/jfx/ui/UserInfoTableView/UserInfoTableView.fxml
+++ b/JFX_UI/src/jfx/ui/UserInfoTableView/UserInfoTableView.fxml
@@ -32,12 +32,12 @@
     <!-- Table -->
     <TableView fx:id="usersTable" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="userNameColumn" text="Name" minWidth="60"/>
-            <TableColumn fx:id="uploadedProgramsColumn" text="Programs" minWidth="60"/>
-            <TableColumn fx:id="uploadedFunctionsColumn" text="Functions" minWidth="60"/>
-            <TableColumn fx:id="currentCreditsColumn" text="Credits" minWidth="55"/>
-            <TableColumn fx:id="usedCreditsColumn" text="Used" minWidth="50"/>
-            <TableColumn fx:id="executionsColumn" text="Execs" minWidth="50"/>
+            <TableColumn fx:id="userNameColumn" text="Name" minWidth="80.0" maxWidth="1.7976931348623157E308" prefWidth="70.0"/>
+            <TableColumn fx:id="uploadedProgramsColumn" text="Programs" minWidth="73.0" maxWidth="73.0" prefWidth="73.0"/>
+            <TableColumn fx:id="uploadedFunctionsColumn" text="Functions" minWidth="80.0" maxWidth="80.0" prefWidth="80.0"/>
+            <TableColumn fx:id="currentCreditsColumn" text="Credits" minWidth="65.0" maxWidth="65.0" prefWidth="65.0"/>
+            <TableColumn fx:id="usedCreditsColumn" text="Used" minWidth="60.0" maxWidth="60.0" prefWidth="60.0"/>
+            <TableColumn fx:id="executionsColumn" text="Execs" minWidth="60.0" maxWidth="60.0" prefWidth="60.0"/>
         </columns>
         <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
