--- a/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
+++ b/JFX_UI/src/jfx/ui/ViewComp/ViewComp.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.geometry.Insets?>
 
-<SplitPane dividerPositions="0.7" minHeight="300.0" minWidth="400.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="550.0" stylesheets="@ViewCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
+<SplitPane dividerPositions="0.7" minHeight="300.0" minWidth="500.0" orientation="VERTICAL" prefHeight="500.0" prefWidth="650.0" stylesheets="@ViewCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.ViewComp.ViewCompController">
     <items>
-        <VBox prefHeight="200.0" prefWidth="100.0" spacing="3.0">
+        <VBox prefHeight="200.0" prefWidth="100.0" spacing="3.0" fillWidth="true">
             <children>
                 <HBox spacing="8.0" alignment="CENTER" prefHeight="30.0">
                     <children>
@@ -48,11 +48,11 @@
 
                 <fx:include fx:id="instructionsTable" source="../InstructionTableView/instructionsTable.fxml" VBox.vgrow="ALWAYS" />
 
-                <Label id="summaryLbl" fx:id="summeryLineLabel" alignment="CENTER" contentDisplay="CENTER" text="Summary line">
+                <HBox fx:id="summeryLineLabel" alignment="CENTER" id="summaryLbl" style="-fx-background-color: #f8f9fa;">
                     <padding>
                         <Insets left="5.0" right="5.0" top="3.0" bottom="3.0" />
                     </padding>
-                </Label>
+                </HBox>
             </children>
             <padding>
                 <Insets left="3.0" right="3.0" top="3.0" bottom="3.0" />
